Bug 104726 - [EFL] Missing implementation of GraphicsContext3DPrivate::platformLayerSize()
Summary: [EFL] Missing implementation of GraphicsContext3DPrivate::platformLayerSize()
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit EFL (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Viatcheslav Ostapenko
URL:
Keywords:
Depends on:
Blocks: 104664
  Show dependency treegraph
 
Reported: 2012-12-11 15:00 PST by Viatcheslav Ostapenko
Modified: 2012-12-11 17:24 PST (History)
4 users (show)

See Also:


Attachments
Patch (2.48 KB, patch)
2012-12-11 15:06 PST, Viatcheslav Ostapenko
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Viatcheslav Ostapenko 2012-12-11 15:00:31 PST
r135200 make implementation of platformLayerSize() only in Qt version of GraphicsContext3DPrivate. EFL also needs it.
Comment 1 Viatcheslav Ostapenko 2012-12-11 15:06:17 PST
Created attachment 178886 [details]
Patch
Comment 2 WebKit Review Bot 2012-12-11 17:24:47 PST
Comment on attachment 178886 [details]
Patch

Clearing flags on attachment: 178886

Committed r137395: <http://trac.webkit.org/changeset/137395>
Comment 3 WebKit Review Bot 2012-12-11 17:24:50 PST
All reviewed patches have been landed.  Closing bug.