[EFL] Missing implementation of GraphicsContext3DPrivate::platformLayerSize() https://bugs.webkit.org/show_bug.cgi?id=104726

Patch by Viatcheslav Ostapenko <v.ostapenko@samsung.com> on 2012-12-11
Reviewed by Kenneth Rohde Christiansen.

Add common implementation of GraphicsContext3DPrivate::platformLayerSize() similar
to Qt version. There is nothing platform specific in Qt version.

Covered by existing tests.

* platform/graphics/efl/GraphicsContext3DPrivate.cpp:
(GraphicsContext3DPrivate::platformLayerSize):
* platform/graphics/efl/GraphicsContext3DPrivate.h:
(GraphicsContext3DPrivate):

Canonical link: https://commits.webkit.org/122950@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137395 268f45cc-cd09-0410-ab3c-d52691b4dbfc